# paper-with-code

./: .gitignore  Dockerfile  README.md
DCF/: Readme.md
MLP_mixer/: MLP-mixer.ipynb  Readme.md
SORT/: CMakeLists.txt  Readme.md  main.cpp
SORT/eigen_samples/: CMakeLists.txt  check_invertible.cpp  inverse_matrix.cpp  linear_solver.cpp  matmul.cpp
SSD/: Readme.md
StableDiffusion/: Readme.md  Stable_diffusion.ipynb
VAE/: Readme.md  VAE_pytorch.ipynb
YOLOv1/: Readme.md  coco_datasets.py  engine.py  main.py  model.py  pascal_voc.py  transform.py  utils.py
YOLOv2/: COCO_Exploration.ipynb  Readme.md  coco_datasets.py  transform.py
YOLOv3/: COCO_Exploration.ipynb  Readme.md  coco_datasets.py  yolov3.py
Yolo_v1/: Readme.md  engine.py  losses.py  main.py  model.py  pascal_voc.py  utils.py
custom_pytorch_operator_cpp_cuda/: Readme.md  setup.py
custom_pytorch_operator_cpp_cuda/extension_cpp/: ops.py
custom_pytorch_operator_cpp_cuda/extension_cpp/csrc/: mul_add.cpp
custom_pytorch_operator_cpp_cuda/test/: test_extension.py
dl_basic/: Readme.md
dl_basic/chap01_introduction/: 1_1_BackgroundMathematics.ipynb
dl_basic/chap02_supervised_learning/: 2_1_Supervised_Learning.ipynb.ipynb
notebooks/: Readme.md  SORT.ipynb  gaussian-processes-from-scratch.ipynb
notebooks/object-detection/: Readme.md  YOLO_v1.ipynb
notebooks/object-tracking/: KalmanFilter.ipynb  KalmanFilter.py  SORT.ipynb
notebooks/uncatergorized/: Implicit bias by small initialization.ipynb  aot_autograd_optimizations.ipynb
